--- a/PAM/Views/NewRequest/SelectSystems.cshtml
+++ b/PAM/Views/NewRequest/SelectSystems.cshtml
@@ -1,47 +1,53 @@
 ﻿@model IEnumerable<PAM.Models.UnitSystem>
 
 @{
-     ViewData["Title"] = "System Selection";
+  ViewData["Title"] = "System Selection";
 }
 <body onload="javascript: stepIndicate()">
-  <partial name="../Shared/_ProgressBar.cshtml" />
-  <form asp-controller="NewRequest" asp-action="SystemSelected" method="post">
-    <div class="shadow-container">
-      <div class="alert alert-info">
-        Step 5 - Default Systems Associated with Unit
+  <div class="row">
+    <div class="col-xl-8 offset-xl-2">
+      <div class="form-container shadow-lg">
+        <partial name="../Shared/_ProgressBar.cshtml" />
+        <form asp-controller="NewRequest" asp-action="SystemSelected" method="post">
+          <div class="shadow-container">
+            <div class="alert alert-info">
+              Step 5 - Default Systems Associated with Unit
+            </div>
+            <table class="table table-hover">
+              <thead class="thead-dark">
+                <tr>
+                  <th>
+                    @Html.DisplayNameFor(model => model.System.Name)
+                  </th>
+                  <th>
+                    @Html.DisplayNameFor(model => model.System.Description)
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                @foreach (var item in Model)
+                {
+                  <tr>
+                    <td>
+                      @Html.DisplayFor(modelItem => item.System.Name)
+                    </td>
+                    <td>
+                      @Html.DisplayFor(modelItem => item.System.Description)
+                    </td>
+                  </tr>
+                }
+              </tbody>
+            </table>
+          </div>
+          <button type="submit" class="btn btn-info float-right m-3"> Next </button>
+        </form>
+        <form asp-controller="NewRequest" asp-action="SelectUnit" method="get">
+          <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
+        </form>
+        <form asp-controller="Draft">
+          <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
+        </form>
       </div>
-      <table class="table table-hover">
-        <thead class="thead-dark">
-          <tr>
-            <th>
-              @Html.DisplayNameFor(model => model.System.Name)
-            </th>
-            <th>
-              @Html.DisplayNameFor(model => model.System.Description)
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          @foreach (var item in Model)
-          {
-            <tr>
-              <td>
-                @Html.DisplayFor(modelItem => item.System.Name)
-              </td>
-              <td>
-                @Html.DisplayFor(modelItem => item.System.Description)
-              </td>
-            </tr>
-          }
-        </tbody>
-      </table>
     </div>
-    <button type="submit" class="btn btn-info float-right m-3"> Next </button>
-  </form>
-  <form asp-controller="NewRequest" asp-action="SelectUnit" method="get">
-    <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
-  </form>
-  <form asp-controller="Draft">
-    <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
-  </form>
+  </div>
 </body>
