Able to get supervisor value from form and send to controller

--- a/PAM/Views/NewRequest/Supervisors.cshtml
+++ b/PAM/Views/NewRequest/Supervisors.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="autocomplete" style="width:400px;">
       <label>Supervisors</label>
-      <input id="adEmployees" type="text" placeholder="Supervisor" autocomplete="off">
+      <input id="adEmployees" name="supervisor" type="text" placeholder="Supervisor" autocomplete="off" value="">
     </div>
     <input type="submit" class="btn btn-primary">
   </form>
