--- a/PAM/Views/SelectUnit/SelectUnit.cshtml
+++ b/PAM/Views/SelectUnit/SelectUnit.cshtml
@@ -2,8 +2,13 @@
   ViewData["Title"] = "Unit Selection";
 }
 
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="~/lib/jquery/dist/jquery.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.js"></script>
+</head>
 <body onload="javascript: stepIndicate()">
-  <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="SelectUnit" asp-action="PickUnit" method="post">
     <div class="shadow-container">
@@ -21,8 +26,6 @@
   <form asp-controller="Draft">
     <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
   </form>
-  <script src="~/lib/jquery/dist/jquery.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.js"></script>
   <script>
       var mytree = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(@ViewData["MyTree"]));
     $('#tree').treeview({
