fixed icon expand for units

--- a/PAM/Views/Management/Locations.cshtml
+++ b/PAM/Views/Management/Locations.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Location</h2>
 
-<p>
-    <a asp-action="CreateLocation">Create New</a>
+<p style="font-size: 40px;">
+    Locations
+    <a asp-action="CreateLocation" class="btn btn-info float-right">Create New</a>
 </p>
 <table class="table table-hover">
     <thead class="thead-dark">
