--- a/PAM/Views/Management/Systems.cshtml
+++ b/PAM/Views/Management/Systems.cshtml
@@ -4,11 +4,11 @@
   ViewData["Title"] = "Index";
 }
 
-<h2>Systems</h2>
-
-<p>
-  <a asp-action="CreateSystem">Create New</a>
+<p style="font-size: 40px;">
+  Systems
+    <a asp-action="CreateSystems" class="btn btn-info float-right">Create New</a>
 </p>
+
 <table class="table table-condensed">
   <thead class="thead-dark">
     <tr>
