--- a/PAM/Views/Management/Units.cshtml
+++ b/PAM/Views/Management/Units.cshtml
@@ -3,10 +3,9 @@
 @{
     ViewData["Title"] = "Units";
 }
-<h2> Units</h2>
-
-<p>
-    <a asp-action="CreateUnit">Create New</a>
+<p style="font-size: 40px;">
+   Units 
+   <a asp-action="CreateUnits" class="btn btn-info float-right">Create New</a>
 </p>
 <table class="table">
     <thead>
