--- a/PAM/Views/Management/Bureaus.cshtml
+++ b/PAM/Views/Management/Bureaus.cshtml
@@ -3,12 +3,11 @@
 @{
   ViewData["Title"] = "Index";
 }
-
-<h2>Bureaus</h2>
-
-<p>
-  <a asp-action="CreateBureau">Create New</a>
+<p style="font-size: 40px;">
+  Bureaus
+  <a asp-action="CreateBureaus" class="btn btn-info float-right">Create New</a>
 </p>
+
 <table class="table table-hover">
   <thead class="thead-dark">
     <tr>
