--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link red="stylesheet" href="~/lib/bootstrap-treeview/dist/css/bootstrap-treeview.min.css" />
-  <link rel="stylesheet" href="~/css/bootstrap.css" />
+  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
   <link rel="stylesheet" href="~/css/styles.css">
   <link rel="stylesheet" href="~/css/w3autocomplete.css">
   <title>PAM - @ViewData["Title"]</title>
