--- a/PAM/Views/Shared/_LoginLayout.cshtml
+++ b/PAM/Views/Shared/_LoginLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="~/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.css" />
     <link rel="stylesheet" href="~/css/styles.css">
     <title>@ViewBag.Title - PAM Mock UI</title>
 </head>
