--- a/PAM/Views/NewRequest/SelectSystems.cshtml
+++ b/PAM/Views/NewRequest/SelectSystems.cshtml
@@ -39,7 +39,7 @@
     <button type="submit" class="btn btn-info float-right m-3"> Next </button>
   </form>
   <form asp-controller="NewRequest" asp-action="SelectUnit" method="get">
-    <button type="button" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
+    <button type="submit" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
   </form>
   <form asp-controller="Draft">
     <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
