--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
       </div>
     </div>
   </div>
-  <p style="text-align:center; color:white;">&copy; Copyright 2018-2019. Los Angeles County. </p>
+  <p style="text-align:center; color:black;">&copy; Copyright 2018-2019. Los Angeles County. </p>
   <form asp-controller="Account" asp-action="Logout" method="post">
     <div class="modal logoutModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog modal-sm">
