--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -3,7 +3,7 @@
     background-position: center;
     background-size: cover;
     min-height: 100vh;
-    background: linear-gradient(to top, #3D7EAA 0%, #E4E5E6 100%);
+    background: linear-gradient(to bottom, #3D7EAA 0%, #E4E5E6 100%);
     background: -webkit-linear-gradient(to bottom, #00416A 0%, #E4E5E6 100%);
 }
 input[type=radio] + label:before{
@@ -17,12 +17,8 @@ label {
 .navbar a{
     font-size: 14px;
 }
-
-.glyphicon-tree-conifer:before {
-  content: "\e199";
-}
-.glyphicon-tree-deciduous:before {
-  content: "\e200";
+i{
+background-color: yellow;
 }
 /*----------------------------------------------------------
     [ Background for Login ]
