--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -28,12 +28,24 @@
     <div class="alert alert-info" style="width:50%;">
       Personal Information
     </div>
-    <p>First Name: <i>@requester.FirstName</i></p>
-    <p>Last Name: <i>@requester.LastName</i></p>
+    <div class="row">
+      <div class="col-3">
+        <p>First Name: <i>@requester.FirstName</i></p>
+      </div>
+      <div class="col-3">
+        <p>Last Name: <i>@requester.LastName</i></p>
+      </div>
+    </div>
     <p>Address: <i>@requester.Address</i></p>
     <p>City: <i>@requester.City</i></p>
-    <p>State: <i>@requester.State</i></p>
-    <p>ZipCode: <i>@requester.Zip</i></p>
+    <div class="row">
+      <div class="col-3">
+        <p>State: <i>@requester.State</i></p>
+      </div>
+      <div class="col-3">
+        <p>ZipCode: <i>@requester.Zip</i></p>
+      </div>
+    </div>
 
     <div class="alert alert-success">
       Step 3 - Request Type
