--- a/PAM/Views/NewRequest/RequesterInfo.cshtml
+++ b/PAM/Views/NewRequest/RequesterInfo.cshtml
@@ -149,7 +149,7 @@
       </div>
     </div>
       -->
-    <button type="button" class="btn btn-info float-right m-3" onclick="validateForm();"> Next </button>
+    <button type="button" class="btn btn-info float-right m-3" onclick="validateInfo();"> Next </button>
   </form>
   <form asp-controller="NewRequest" asp-action="NewRequest" method="get">
     <button type="submit" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
@@ -157,7 +157,7 @@
 </body>
 
 <script>
-  function validateForm() {
+  function validateInfo() {
     if (!validateInput()) return false;
     else document.getElementById("requesterInfo").submit();
   }
