--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -3,8 +3,8 @@
     background-position: center;
     background-size: cover;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #3D7EAA 0%, #E4E5E6 100%);
-    background: -webkit-linear-gradient(to bottom, #00416A 0%, #E4E5E6 100%);
+    background: linear-gradient(to right, #023e8d 0%, #E4E5E6 50%, #023e8d 100%);
+    background: -webkit-linear-gradient(to right, #023e8d 0%, #E4E5E6 50%, #023e8d 100%);
 }
 input[type=radio] + label:before{
     border: 1px solid #777;
