started on request status tables

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
           <a class="nav-link dropdown-toggle" id="navDropDownMenu" data-toggle="dropdown" aria-haspopup="true" href="/Request/Self">Requests</a>
           <ul class="dropdown-menu" aria-labeledby="navDropDownMenu">
             <li><a class="dropdown-item" href="/Request/Self">Your Requests</a> </li>
-            <li><a class="dropdown-item" href="#">Review Requests</a> </li>
-            <li><a class="dropdown-item" href="#">Process Requests</a> </li>
-            <li><a class="dropdown-item" href="#">All Requests</a> </li>
+            <li><a class="dropdown-item" href="/Request/ReviewRequests">Review Requests</a> </li>
+            <li><a class="dropdown-item" href="/Request/ProcessRequests">Process Requests</a> </li>
+            <li><a class="dropdown-item" href="/Request/AllRequests">All Requests</a> </li>
           </ul>
         </li>
         <li class="nav-item">
