--- a/PAM/Views/Request/AllRequests.cshtml
+++ b/PAM/Views/Request/AllRequests.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-  ViewData["Title"] = "My Requests";
+  ViewData["Title"] = "All Requests";
 }
 
 <body>
   <p style="font-size: 40px;">
-    My Requests
+    All Requests
     <a asp-controller="NewRequest" asp-action="CreateRequester" method="get" class="btn btn-info float-right">+ New Request</a>
   </p>
   <hr />
@@ -26,6 +26,7 @@
         <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Submitted By</th>
             <th scope="col">Type</th>
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
@@ -39,6 +40,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
+                <td>@request.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
@@ -58,6 +60,7 @@
         <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Submitted By</th>
             <th scope="col">Type</th>
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
@@ -69,6 +72,7 @@
           {
             <tr>
               <td>@request.RequestId</td>
+              <td>@request.Name</td>
               <td>@request.RequestType.DisplayCode</td>
               <td>@request.SubmittedOn</td>
               <td>@request.RequestStatus</td>
@@ -87,6 +91,7 @@
         <thead class="table-info">
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Submitted By</th>
             <th scope="col">Type</th>
             <th scope="col">Submitted On</th>
             <th scope="col">Status</th>
@@ -100,6 +105,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
+                <td>@request.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
@@ -116,4 +122,3 @@
     </div>
   </div>
 </body>
-
