couple of small changes

--- a/PAM/Views/NewRequest/NewRequest.cshtml
+++ b/PAM/Views/NewRequest/NewRequest.cshtml
@@ -34,7 +34,7 @@
         <label class="custom-control-label label-edit" for="forRadio"> Request for Another </label>
       </div>
 
-      <button type="submit" class="btn btn-info" style="position:relative;margin-top: 40px;">Confirm</button>
+      <button type="submit" class="btn btn-info" style="position:relative;margin-top: 40px;">Next</button>
     </div>
   </form>
 </body>
