--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -98,6 +98,8 @@
       Step 7 - Supervisor's Review
     </div>
     <p> This request will be reviewed by: </p>
-    <button type="submit" class="btn btn-primary">Confirm Submit</button>
+    <div style="display:flex;" class="justify-content-center">
+      <button type="submit" class="btn btn-primary">Confirm Submit</button>
+    </div>
   </form>
 </body>
