--- a/PAM/Views/NewRequest/SelectSystems.cshtml
+++ b/PAM/Views/NewRequest/SelectSystems.cshtml
@@ -11,7 +11,7 @@
         Step 5 - Default Systems Associated with Unit
       </div>
       <table class="table table-hover">
-        <thead class="thead-dark">
+        <thead class="table-info">
           <tr>
             <th>
               @Html.DisplayNameFor(model => model.System.Name)
@@ -41,7 +41,7 @@
   <form asp-controller="NewRequest" asp-action="SelectUnit" method="get">
     <button type="submit" class="btn btn-info float-right m-3" style="display:inline-block">Previous</button>
   </form>
-  <form asp-controller="Draft">
+  <form asp-controller="NewRequest" asp-action="Draft">
     <button type="button" class="btn btn-warning float-left m-3"> Save Draft </button>
   </form>
 </body>
