--- a/PAM/Views/NewRequest/Review.cshtml
+++ b/PAM/Views/NewRequest/Review.cshtml
@@ -1,11 +1,12 @@
 ﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
-     var requester = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("Requester");
-     var requestFor = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("RequestFor");
-     var request = (Request)ViewData["Request"];
-     var systems = (List<UnitSystem>)ViewData["Systems"];
-     ViewData["Title"] = "Review";
+    var requester = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("Requester");
+    var requestFor = HttpContextAccessor.HttpContext.Session.GetObject<Requester>("RequestFor");
+    var request = (Request)ViewData["Request"];
+    var systems = (List<UnitSystem>)ViewData["Systems"];
+    var supervisor = ViewData["Supervisor"];
+    ViewData["Title"] = "Review";
 }
 
 <body onload="javascript: stepIndicate()">
@@ -97,7 +98,7 @@
     <div class="alert alert-success">
       Step 7 - Supervisor's Review
     </div>
-    <p> This request will be reviewed by: </p>
+    <p> This request will be reviewed by: <i>@supervisor</i> </p>
     <div style="display:flex;" class="justify-content-center">
       <button type="submit" class="btn btn-primary">Confirm Submit</button>
     </div>
