--- a/PAM/Views/NewRequest/SelectSystems.cshtml
+++ b/PAM/Views/NewRequest/SelectSystems.cshtml
@@ -8,6 +8,7 @@
   <partial name="../Shared/_ProgressBar.cshtml" />
   <form asp-controller="NewRequest" asp-action="SystemSelected" method="post">
     <div class="shadow-container">
+      <a href="~/Views/NewRequest/SelectSystems.cshtml">~/Views/NewRequest/SelectSystems.cshtml</a>
       <div class="alert alert-info">
         Step 5 - Default Systems Associated with Unit
       </div>
