Units controller can View portfolio

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
           <ul class="dropdown-menu" aria-labeledby="navDropDownMenu">
             <li><a asp-controller="Location" asp-action="Locations" class="dropdown-item">Locations</a> </li>
             <li><a asp-controller="Bureau" asp-action="Bureaus" class="dropdown-item">Bureaus</a> </li>
-            <li><a asp-controller="Unit" asp-action="Units" class="dropdown-item">Units</a> </li>
+            <li><a asp-controller="Unit" asp-action="SelectUnit" class="dropdown-item">Units</a> </li>
             <li><a asp-controller="System" asp-action="Systems" class="dropdown-item">Systems</a> </li>
           </ul>
         </li>
