--- a/PAM/Views/Unit/DetailsUnit.cshtml
+++ b/PAM/Views/Unit/DetailsUnit.cshtml
@@ -47,6 +47,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="EditUnit" asp-route-id="@Model.UnitId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+  <a asp-action="EditUnit" asp-route-id="@Model.UnitId">Edit</a> |
+  <a asp-action="SelectUnit">Back to List  </a> |
+  <a asp-action="DeleteUnit" asp-route-id="@Model.UnitId">Delete  </a> |
+  <a asp-action="SystemPortfolio" asp-route-id="@Model.UnitId">SystemPortfolio </a>
 </div>
