--- a/PAM/Views/Unit/EditUnit.cshtml
+++ b/PAM/Views/Unit/EditUnit.cshtml
@@ -14,7 +14,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="EditUnit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="UnitId" />
             <div class="form-group">
@@ -50,6 +50,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="SelectUnit">Back to List</a>
 </div>
 
