--- a/PAM/Views/Unit/DeleteUnit.cshtml
+++ b/PAM/Views/Unit/DeleteUnit.cshtml
@@ -50,6 +50,6 @@
     <form asp-action="DeleteConfirmedUnit">
         <input type="hidden" asp-for="UnitId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="SelectUnit">Back to List</a>
     </form>
 </div>
