--- a/PAM/wwwroot/css/styles.css
+++ b/PAM/wwwroot/css/styles.css
@@ -36,13 +36,7 @@ background-color: yellow;
     z-index: 1;
 }
 
-.bg-display::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-}
+
 
 /*----------------------------------------------------------
     [ Login Container & Contents ]
@@ -58,16 +52,6 @@ background-color: yellow;
   padding: 15px;
   position: relative;
   z-index: 1;
-}
-
-.login-container::before {
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255,255,255,0.8);
 }
 
 .login-form{
@@ -116,8 +100,9 @@ background-color: yellow;
 /*----------------------------------------------------------
     [ Main Content Styling ]
 */
-.navbar{
-    padding: 0 0 0 1.5rem;
+
+.main-content {
+  margin-top: 2em;
 }
 
 .content-container {
@@ -158,6 +143,10 @@ input.invalid {
     background-color: #ffdddd;
 }
 
+footer {
+  text-align: center;
+  color: white;
+}
 /*----------------------------------------------------------
     [ Progress Bar CSS ]
 */
