--- a/PAM/Views/Unit/SystemPortfolio.cshtml
+++ b/PAM/Views/Unit/SystemPortfolio.cshtml
@@ -3,31 +3,39 @@
 @{
   ViewData["Title"] = "System Selection";
 }
+<!doctype html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.4/dist/bootstrap-table.min.css">
-  <script src="https://unpkg.com/bootstrap-table@1.13.4/dist/bootstrap-table.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
+
 </head>
 
-<body onload="javascript: stepIndicate()">
+
+  <body >
 
 
-  <div class="alert alert-info">
-    Default Systems Associated with Unit
-  </div>
-  <table class="table table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th>
-          @Html.DisplayNameFor(model => model.System.Name)
-        </th>
-        <th>
-          @Html.DisplayNameFor(model => model.System.Description)
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      @foreach (var item in Model)
-      {
+    <div class="alert alert-info">
+      Default Systems Associated with Unit
+    </div>
+    <table class="table table-hover" data-toggle="table" data-pagination="true" data-search="true">
+      <thead class="thead-dark">
+        <tr>
+          <th data-sortable="true">
+            @Html.DisplayNameFor(model => model.System.Name)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.System.Description)
+          </th>
+          <th>
+            Options
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        @foreach (var item in Model)
+        {
         <tr>
           <td>
             @Html.DisplayFor(modelItem => item.System.Name)
@@ -35,11 +43,24 @@
           <td>
             @Html.DisplayFor(modelItem => item.System.Description)
           </td>
+          <td>
+            <a  asp-action="EditSystem" asp-route-id="@item.SystemId"><i class="fas fa-edit"></i></a> |
+            <a  asp-action="DetailsSystem" asp-route-id="@item.SystemId"><i class="fas fa-info-circle"></i></a> |
+            <a  asp-action="DeleteSystem" asp-route-id="@item.SystemId"><i class="fas fa-trash"></i></a>
+          </td>
         </tr>
-      }
-    </tbody>
-  </table>
+        }
+      </tbody>
+    </table>
 
 
+    <!-- jQuery first, then Popper.js, then Bootstrap JS, and then Bootstrap Table JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.6.2/core.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.13.4/dist/bootstrap-table.min.js"></script>
+  </body>
 
-</body>
+
+</html>
